fixed signature overlap

--- a/src/editor/components/EditorDrawer/EditorDrawer.scss
+++ b/src/editor/components/EditorDrawer/EditorDrawer.scss
@@ -101,7 +101,7 @@
 
     &__signature {
         padding: 0 10px;
-        margin-top: 2px;
+        margin-top: 1px;
         height: 100%;
         display: flex;
         flex-direction: column;
